fixed icon alignment + added rainbow css to compliment text

--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,7 @@
 #menuItem > a:hover {
 	color: #e6e6e6;
 }
-  
+
 body {
 	font-family: 'Lato', sans-serif;
 	background: rgb(51, 51, 51);
@@ -65,10 +65,9 @@ body {
 
 	margin: auto;
 	margin-bottom: 200px;
-	
+
 	padding: 20px;
 	padding-bottom: 75px;
-	
 	width: 60%;
 	height: auto;
 
@@ -84,10 +83,10 @@ body {
 
 	margin: auto;
 	margin-bottom: 200px;
-	
+
 	padding: 20px;
 	padding-bottom: 100px;
-	
+
 	width: 60%;
 	height: auto;
 }
@@ -112,9 +111,7 @@ body {
 .button {
     width: fit-content;
 	padding: 15px 25px;
-    margin-left: 20px;
-    margin-right: 20px;
-    margin-bottom: 20px;
+    margin: 1rem;
 	font-size: 24px;
 	cursor: pointer;
 	text-decoration: none;
@@ -148,7 +145,7 @@ hr {
     flex: auto;
     justify-content: center;
 }
-  
+
 #itemChoice {
     display: flex;
     flex-direction: column;
@@ -179,24 +176,14 @@ hr {
 }
 
 #externalLinks {
-	margin: auto;
-	width: 50%;
-	position: relative;
-	text-align: center;
+    display: flex;
+    justify-content: center;
 	margin-bottom: 50px;
-	
-}
 
-#externalLinks > a {
-	vertical-align: middle;
-	display: inline-block;
-	width: 50px;
-	margin: 25px;
-	position: relative;
 }
 
 #clickableLogos > img {
-	
+
 	vertical-align: middle;
 	width: 50px;
 	margin: 25px;
@@ -235,6 +222,22 @@ hr {
 	background-color: #ff8534;
 	text-align: center;
 	transition: all 500ms ease;
+}
+
+#complimentContainer {
+    background: white;
+    border-radius: 10px;
+    margin: 1rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#compliment {
+    background: linear-gradient(to right, red, orange, green, blue, violet);
+    color: transparent;
+    -webkit-background-clip: text;
+    font-size: 28px;
 }
 
 /* Handles whether the messageBox is active */
